Fix internal server error on edit // Tidy up

--- a/pages/postfood.html
+++ b/pages/postfood.html
@@ -86,7 +86,8 @@
             <!--/.nav-collapse -->
         </div>
     </nav>
-
+<!-- TODO Mike - streamline for mobile -->
+<!-- TODO Mike - Snack/(Other/Misc) meal time type -->
     <div class="container">
         <!--Initial data when landing on page-->
         <div class="scrumFormat">
