Initial commit for chat functionality

--- a/pages/404.html
+++ b/pages/404.html
@@ -61,6 +61,7 @@
             <li><a href="findfood.html">Find Food</a></li>
             <li><a href="loginAndRegister.html">Login & Register</a></li>
             <li><a href="account.html">Account Settings</a></li>
+            <li><a href="chat.html">Messages</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
