--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -69,6 +69,7 @@
                         <li class="active"><a href="findfood.html">Find Food</a></li>
                         <li><a href="loginAndRegister.html">Login & Register</a></li>
                         <li><a href="account.html">Account Settings</a></li>
+            <li><a href="chat.html">Messages</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
