--- a/pages/home.html
+++ b/pages/home.html
@@ -57,6 +57,7 @@
             <li><a href="findfood.html">Find Food</a></li>
             <li><a href="loginAndRegister.html">Login & Register</a></li>
               <li><a href="account.html">Account Settings</a></li>
+            <li><a href="chat.html">Messages</a></li>
 
 
 
