--- a/pages/postfood.html
+++ b/pages/postfood.html
@@ -77,6 +77,7 @@
                     <li><a href="findfood.html">Find Food</a></li>
                     <li><a href="loginAndRegister.html">Login &amp; Register</a></li>
                     <li><a href="account.html">Account Settings</a></li>
+            <li><a href="chat.html">Messages</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
