--- a/pages/resetPassword.html
+++ b/pages/resetPassword.html
@@ -24,17 +24,17 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarContent" aria-expanded="false" aria-controls="navbarContent">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a id = "navbarheader" class="navbar-brand" href="">
+            <a id = "navbar-header" class="navbar-brand" href="">
                 <img id="navbar-logo" src = "possibleLogo.png">
             </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbarContent" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
 
             <li class="dropdown dropdown-notifications" >
