notif stuff and post modal starts

--- a/pages/account.html
+++ b/pages/account.html
@@ -94,13 +94,12 @@
                 </div>
                 <div id="collapseNotifications" class="panel-collapse collapse">
                     <div class="panel-body">
-                        <p> Notification options go here</p>
-                        
+                            <p style="font-style:italic" id = "showDistanceNearby"> Currently showing distances up to 1000km </p>
                             <label for="distanceNearby">Set "nearby foods" distance</label>
-                        <div class="input-group">
-                             <input id = "distanceNearby" type="text" class="form-control" placeholder="10000" value="10000">
+                        <div id="distanceValidate" class="input-group">
+                             <input id = "distanceNearby" type="number" class="form-control" placeholder="Enter new distance" >
                              <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button" id="changeNearbyDistance">Change</button>
+                                <button class="btn btn-secondary" type="button" id="changeNearbyDistance" >Change</button>
                              </span>
 
                         </div>
@@ -118,5 +117,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
+    <script type="text/javascript" src="notifications.js"></script>
   </body>
 </html>
