--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -280,6 +280,25 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="seePostsModal" role="dialog">
+            <div class="modal-dialog">
+            <!-- modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                       <!-- <button type="button" class="close" data-dismiss="modal">&times;</button>-->
+                        <h3 class="modal-title">
+                        <center id="modalPostTital">PostTitle</center>
+                    </h3>
+                    </div>
+                    <div class="modal-body">
+
+                        <!--<iframe id="addPalIframe" name="addPalIframe" src="addPal" width="550" height="540"></iframe>-->
+                        <br>
+                    </div>
+
+                </div>
+            </div>
+        </div>
         <!-- end of columns -->
 
         <div class="col-sm-3" id="column0">
