--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -18,9 +18,9 @@
     <!-- Can remove this one?
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">-->
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
     <!--this makes the drop down notifcations work! -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
        <!-- this makes the bell pretty -->
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
@@ -284,10 +284,10 @@
             <div class="modal-dialog">
             <!-- modal content-->
                 <div class="modal-content">
-                    <div class="modal-header">
-                       <!-- <button type="button" class="close" data-dismiss="modal">&times;</button>-->
+                    <div class="modal-header" id = "modalHeader">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h3 class="modal-title">
-                        <center id="modalPostTital">PostTitle</center>
+                        <center id="modalPostTital"></center>
                     </h3>
                     </div>
                     <div class="modal-body">
@@ -299,6 +299,7 @@
                 </div>
             </div>
         </div>
+            
         <!-- end of columns -->
 
         <div class="col-sm-3" id="column0">
