buttons and crap

--- a/pages/postManagement.html
+++ b/pages/postManagement.html
@@ -83,7 +83,7 @@
         <div class="scrumFormat">
             <h1>Post Management</h1>
             <form action="/postfood.html">
-                <button class="btn btn-primary" type="submit" id="createPostButton">Create Post</button>
+                <button class="btn btn-primary btn-lg" type="submit" id="createPostButton" style="background-color: #1C939B; border-color:white">Create Post</button>
             </form>
             <!-- A large picture -->
             <!-- Link to download from app store? -->
