more buttons and crap for modal

--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -320,10 +320,14 @@
                         </div>
                     </div>
                     </div>
+                    <div class ="panel-footer">
+                    <button id ="messageUser" class="btn btn-primary" href="chat.html"> <span class="glyphicon glyphicon-user"></span> Message User</button>
+                       </div>
+                    </div>
 
                 </div>
             </div>
-        </div>
+        
             
         <!-- end of columns -->
 
