--- a/pages/home.html
+++ b/pages/home.html
@@ -57,7 +57,7 @@
             <li class="active"><a href="home.html">Home</a></li>
             <li><a href="postManagement.html">Manage Posts</a></li>
             <li><a href="findfood.html">Find Food</a></li>
-            <li><a href="loginAndRegister.html">Login & Register</a></li>
+            <li><a href="loginAndRegister.html">Login &amp; Register</a></li>
               <li><a href="account.html">Account Settings</a></li>
             <li><a href="chat.html">Messages</a></li>
 
