--- a/pages/postManagement.html
+++ b/pages/postManagement.html
@@ -16,8 +16,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
     <!-- Custom styles for this template -->
     <link href="scrumFormat.css" rel="stylesheet">
     <link href="findFoodCSSTest.css" rel="stylesheet">
@@ -43,9 +43,12 @@
 
                     <li class="dropdown dropdown-notifications">
                         <!--Todo: want to make it pull left. -->
-                        <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton">
-
-                            <i data-count="2" class="glyphicon glyphicon-bell "></i>
+                         <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge">
+                            <i class="glyphicon glyphicon-bell"></i>
+                            <div id = "counter">
+                            
+                            </div>
+                            </span>  
                         </a>
                         <ul class="dropdown-menu" id="notificationsPanel">
                             <div class="container">
@@ -123,7 +126,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="postManagement.js"></script>
-    <script type="text/javascript" src="globalFunctions.js"></script>
+    <script type="text/javascript" src="globalFunctions.js">
+    </script>
+    <script type="text/javascript" src="notifications.js"></script>
 </body>
 
 </html>
