--- a/pages/loginAndRegister.html
+++ b/pages/loginAndRegister.html
@@ -13,8 +13,6 @@
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
     <link href="scrumFormat.css" rel="stylesheet">
@@ -40,10 +38,13 @@
           <ul class="nav navbar-nav">
               <li class="dropdown dropdown-notifications" >
                 <!--Todo: want to make it pull left. -->
-            <a href="#notifications-panel" class="dropdown-toggle" data-toggle = "dropdown" id = "notificationsButton">
-            <i data-count = "2" class="glyphicon glyphicon-bell"></i>
-              <!--<i data-count="2" class="glyphicon glyphicon-comment "></i>-->
-            </a>
+            <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge" style = "background-color:grey">
+                            <i class="glyphicon glyphicon-bell"></i>
+                            <div id = "counter">
+                            
+                            </div>
+                            </span>  
+                        </a>
 
               <ul class = "dropdown-menu" id = "notificationsPanel">
                 <div class="container" id = "allNotifs">
