found that stupid bell error

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -61,7 +61,7 @@
                             </span>  
                         </a>
               <ul class = "dropdown-menu" id = "notificationsPanel">
-                <div class="container">
+                <div class="container" id = "allNotifs">
                   <h3>Notifications</h3>
                     <!-- where the notifications will be put -->
                     <ul class = "notifications" id = "notificationList">
