--- a/pages/postfood.html
+++ b/pages/postfood.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +14,6 @@
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Custom styles for this template -->
     <link href="scrumFormat.css" rel="stylesheet">
     <!-- Map for location selection -->
@@ -55,8 +52,12 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown dropdown-notifications">
                         <!--Todo: want to make it pull left. -->
-                        <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton">
-                            <i data-count="2" class="glyphicon glyphicon-bell "></i>
+                        <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge">
+                            <i class="glyphicon glyphicon-bell"></i>
+                            <div id = "counter">
+                            
+                            </div>
+                            </span>  
                         </a>
                         <ul class="dropdown-menu" id="notificationsPanel">
                             <div class="container" id="allNotifs">
@@ -276,6 +277,7 @@
     <!-- Our own JS -->
     <script type="text/javascript" src="postfood.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
+    <script type="text/javascript" src="notifications.js"></script>
 </body>
 
 </html>
