--- a/pages/postManagement.html
+++ b/pages/postManagement.html
@@ -16,8 +16,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">-->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    
     <!-- Custom styles for this template -->
     <link href="scrumFormat.css" rel="stylesheet">
     <link href="findFoodCSSTest.css" rel="stylesheet">
@@ -51,7 +50,7 @@
                             </span>  
                         </a>
                         <ul class="dropdown-menu" id="notificationsPanel">
-                            <div class="container">
+                            <div class="container" id="allNotifs">
                                 <h3>Notifications</h3>
                                 <!-- where the notifications will be put -->
                                 <ul class="notifications" id="notificationList">
