--- a/pages/resetPassword.html
+++ b/pages/resetPassword.html
@@ -13,8 +13,7 @@
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
     <!-- Custom styles for this template -->
     <link href="scrumFormat.css" rel="stylesheet">
      </head>
@@ -30,21 +29,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a id = "navbar-header" class="navbar-brand" href="">
-                <img id="navbar-logo" src = "possibleLogo.png">
-            </a>
-        </div>
-        <div id="navbarContent" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+            <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge">
+                            <i class="glyphicon glyphicon-bell"></i>
+                            <div id = "counter">
+                            
+                            </div>
+                            </span>  
+                        </a>
 
-            <li class="dropdown dropdown-notifications" >
-                <!--Todo: want to make it pull left. -->
-            <a href="#notifications-panel" class="dropdown-toggle" data-toggle = "dropdown" id = "notificationsButton">
-
-              <i data-count="2" class="glyphicon glyphicon-bell "></i>
-            </a>
-              <ul class = "dropdown-menu" id = "notificationsPanel">
-                <div class="container">
+                        <ul class="dropdown-menu" id="notificationsPanel">
+                            <div class="container" id="allNotifs">
                   <h3>Notifications</h3>
                     <!-- where the notifications will be put -->
                     <ul class = "notifications" id = "notificationList">
