yeah notifs work

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -64,8 +64,9 @@
                 <div class="container" id = "allNotifs">
                   <h3>Notifications</h3>
                     <!-- where the notifications will be put -->
-                    <ul class = "notifications" id = "notificationList">
-                    </ul>
+                    <ul class="list-unstyled" id="notificationList">
+                                        
+                                    </ul>
                 </div><!--/.nav-collapse -->
                 </ul>
             </li>
