--- a/pages/loginAndRegister.html
+++ b/pages/loginAndRegister.html
@@ -165,6 +165,11 @@
                 <input type="email" class="form-control" id="emailRegisterInput">
                 <div id="emailRegisterFeedback"></div>
               </div>
+              <div class="form-group" id="confirmEmailRegisterGroup">
+                <label for="confirmEmailRegisterInput">*Confirm Email:</label>
+                <input type="email" class="form-control" id="confirmEmailRegisterInput">
+                <div id="confirmEmailRegisterFeedback"></div>
+              </div>
               <button class="btn btn-primary" type="submit" id="registerButton">Register</button>
               <br><br>
               <div id="registerFeedback"></div>
