--- a/pages/loginAndRegister.html
+++ b/pages/loginAndRegister.html
@@ -38,7 +38,7 @@
           <ul class="nav navbar-nav">
               <li class="dropdown dropdown-notifications" >
                 <!--Todo: want to make it pull left. -->
-            <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge" style = "background-color:grey">
+            <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge">
                             <i class="glyphicon glyphicon-bell"></i>
                             <div id = "counter">
                             
@@ -188,6 +188,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="loginAndRegister.js"></script>
+    <script type="text/javascript" src="notifications.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
   </body>
 </html>
