--- a/pages/loginAndRegister.html
+++ b/pages/loginAndRegister.html
@@ -81,7 +81,7 @@
 
       <div class="scrumFormat">
 
-        <div id="leftColumn" class="col-xs-6">
+        <div id="leftColumn" class="col-md-6">
 
           <div class="panel panel-default">
             <div class="panel-heading">Login</div>
@@ -130,7 +130,7 @@
 
         </div>
 
-        <div id="rightColumn" class="col-xs-6">
+        <div id="rightColumn" class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-heading">Register</div>
             <div id="registerPanel" class="panel-body">
