filter and distance error sorted

--- a/pages/account.html
+++ b/pages/account.html
@@ -94,7 +94,7 @@
                         </a>
                     </h4>
                 </div>
-                <div id="collapseNotifications" class="panel-collapse collapse">
+                <div id="collapseNotifications" class="panel-collapse collapse in">
                     <div class="panel-body">
                             <p style="font-style:italic" id = "showDistanceNearby"> Currently showing distances up to 1000km </p>
                             <label for="distanceNearby">Set "nearby foods" distance</label>
@@ -119,6 +119,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
-    <script type="text/javascript" src="notifications.js"></script>
+    <script type="text/javascript" src="notifications.js">
+    </script>
+    <script>
+          
+    </script>
   </body>
 </html>
