map on filter page

--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -84,8 +84,8 @@
 
         <!--Initial data when landing on page-->
         <div class="scrumFormat" id="testing">
-            <h1>Scrum Find Food Page</h1>
-            <p class="lead">Todo:<br>- Load results by location (done by gps?)<br>- Filter and sort results<br>- Load details for food post<br>- Instant messaging service (possibly in seperate page?)<br>- Display results in interactive map</p>
+            <h1>Find Food Posts</h1>
+
 
             <!-- Load results by location (done by gps?) -->
             <!-- Filter and sort results -->
@@ -271,6 +271,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id = "iframediv" class ="text-center">
+            <iframe id = "mapIframe" src="maps_prototype.html"></iframe>
         </div>
         <div class="modal fade" id="seePostsModal" role="dialog">
             <div class="modal-dialog">
