--- a/pages/chat.html
+++ b/pages/chat.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="/css/scrumFormat.css" rel="stylesheet">
+    <link href="scrumFormat.css" rel="stylesheet">
   </head>
 
   <body style="overflow: hidden;">
@@ -92,7 +92,7 @@
           <!--div class to be filled with chat rooms once they've been loaded-->
           <div class="list-group" id="rooms" style="overflow-y: auto; height: 86.4vh;"></div>
         </div>
-        <div class="col-md-10" style="position:relative; height: 82.5vh; overflow-y: auto;">
+        <div class="col-md-10" style="position:relative; height: 82.5vh; overflow-y: auto;" id="messages_div">
           <!--div class to be filled with chat messages once they've been loaded-->
           <ul id="messages"></ul> <!-- List that holds messages displayed on screen -->
           <form action="">
